// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreakTimerForm should match snapshot 1`] = `
<div
  className="css-j7qwjs"
>
  <div
    className="css-102g4jn"
  >
    <div
      backgroundColor="saltBox"
      className="css-b6lj8k"
      id="break-timer"
      onClick={[Function]}
    >
      <div
        backgroundColor="outerSpace"
        className="css-dx4x1i"
      />
    </div>
    <h4
      className="css-30v94s"
      color="color"
      labelFor="break-timer"
    >
      Break Timer
    </h4>
  </div>
</div>
`;

exports[`BreakTimerForm should match snapshot when enabled 1`] = `
<div
  className="css-j7qwjs"
>
  <div
    className="css-1lqrh8c"
  >
    <div
      className="css-j7qwjs"
    >
      <label
        className="css-30v94s"
        color="mischka"
        htmlFor="break-timer-time"
      >
        <small
          className="css-0"
        >
          Shown in NaN minutes of usage
        </small>
      </label>
      <input
        backgroundColor="mischka"
        className="css-50o2oe"
        color="outerSpace"
        id="break-timer-time"
        onChange={[Function]}
        type="number"
        value={NaN}
      />
    </div>
  </div>
  <div
    className="css-102g4jn"
  >
    <div
      backgroundColor="saltBox"
      className="css-b6lj8k"
      id="break-timer"
      onClick={[Function]}
    >
      <div
        backgroundColor="mischka"
        className="css-4zx0ao"
      />
    </div>
    <h4
      className="css-30v94s"
      color="color"
      labelFor="break-timer"
    >
      Break Timer
    </h4>
  </div>
</div>
`;
